# ot-harjoitustyo-2025

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimusmaarittely.md 
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
src/: build.py  config.py  database_connection.py  index.py  initialise_database.py
src/entities/: expense.py  user.py
src/repositories/: expense_repository.py  user_repository.py
src/services/: expense_service.py
src/tests/: test_expense_repository.py  test_expense_service.py  test_user_repository.py
src/ui/: create_expense_view.py  create_user_view.py  expence_tracker_view.py  expense_tracker_view.py  login_view.py  ui.py
